[package]
name = "schellen-remote-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
clap = { version = "4.0.13", features = ["cargo"] }
tokio = { version = "1.21.2", features = ["full"] }
rumqttc = "0.17.0"
tokio-serial = "5.4.1"
